--- a/catalogo/pom.xml
+++ b/catalogo/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>catalogo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>catalogo</name>
-	<description>Catalog Project for Spring Boot</description>
+	<description>Catalogo de pelicualas de Sakila</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -63,6 +63,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
 		</dependency>
 	</dependencies>
 
