--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -65,6 +65,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web-services</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>demo-ws</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -86,11 +91,11 @@
 				<artifactId>jaxws-maven-plugin</artifactId>
 				<version>3.0.0</version>
 				<executions>
-				<execution>
+					<execution>
 						<goals>
 							<goal>wsimport</goal>
 						</goals>
-				</execution>
+					</execution>
 				</executions>
 				<configuration>
 					<packageName>com.example.webservice.schema</packageName>
